# askthestacks

./: .gitignore  README.md  pyproject.toml
data/corpus/: build_report_2026-05-13.json  build_report_2026-05-17.json  corpus_v1_2026-05-13.json  corpus_v1_2026-05-17.json  latest.json
eval/: last_run.json  queries.json
scripts/: build_corpus.py  eval.py  serve.py  try_fetch.py
src/askthestacks/: api.py  api_cache.py  api_models.py  config.py  embedder.py  index.py  retrieval.py  schema.py  scraper.py
src/askthestacks/static/: index.html  widget.html  widget_preview.html
tests/: conftest.py  test_api.py  test_build_corpus.py  test_embedder.py  test_index.py  test_retrieval.py  test_schema.py  test_scraper.py
tests/fixtures/: databases_page.html  subcollection_alexander_street.html  subcollection_ebooks.html  subcollection_ejournals.html
